<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.qarmazilabs.mole.MainActivity" >

<!--     Device ID as header -->
    <TextView
        android:id="@+id/deviceID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

   <!--     ISO Country Code Field -->
   <TextView
       android:id="@+id/countryCodeText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/countryCode_string"
       android:layout_below="@id/deviceID"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/countryCode" />
   <TextView
       android:id="@+id/countryCode"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/deviceID"
       android:layout_alignParentRight="true" />
    
<!--     Phone Type Field -->
   <TextView
       android:id="@+id/phoneTypeText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/phoneType_string"
       android:layout_below="@id/countryCodeText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/phoneType" />
   <TextView
       android:id="@+id/phoneType"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/countryCode"
       android:layout_alignParentRight="true" />
   
<!--     Network Type Field -->
   <TextView
       android:id="@+id/networkTypeText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/networkType_string"
       android:layout_below="@id/phoneTypeText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/networkType" />
   <TextView
       android:id="@+id/networkType"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/phoneType"
       android:layout_alignParentRight="true" />
   
<!--     Network Operator Field -->
   <TextView
       android:id="@+id/networkOperatorText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/networkOperator_string"
       android:layout_below="@id/networkTypeText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/simOperator" />
   <TextView
       android:id="@+id/networkOperator"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/networkType"
       android:layout_alignParentRight="true" />

   <!--     SIM Operator Field -->
   <TextView
       android:id="@+id/simOperatorText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/simOperator_string"
       android:layout_below="@id/networkOperatorText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/networkType" />
   <TextView
       android:id="@+id/simOperator"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/networkOperator"
       android:layout_alignParentRight="true" />

   <!--     Cell ID Field -->
   <TextView
       android:id="@+id/cIDText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/cID_string"
       android:layout_below="@id/simOperatorText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/cID" />
   <TextView
       android:id="@+id/cID"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/simOperator"
       android:layout_alignParentRight="true" />

   <!--     Long Cell ID Field -->
   <TextView
       android:id="@+id/lCIDText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/lCID_string"
       android:layout_below="@id/cIDText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/lCID" />
   <TextView
       android:id="@+id/lCID"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/cID"
       android:layout_alignParentRight="true" />
   
   <!--     Local Area Code Field -->
   <TextView
       android:id="@+id/lACText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/lAC_string"
       android:layout_below="@id/lCIDText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/lAC" />
   <TextView
       android:id="@+id/lAC"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/lCID"
       android:layout_alignParentRight="true" />
   
   <!--     Primary Scrambling Code Field -->
   <TextView
       android:id="@+id/pSCText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/pSC_string"
       android:layout_below="@id/lACText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/pSC" />
   <TextView
       android:id="@+id/pSC"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/lAC"
       android:layout_alignParentRight="true" />

   <!--     Signal Strength Field -->
   <TextView
       android:id="@+id/sSText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/sS_string"
       android:layout_below="@id/pSCText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/sS" />
   <TextView
       android:id="@+id/sS"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/pSC"
       android:layout_alignParentRight="true" />
   
   <!--     Mobile Network Code Field -->
   <TextView
       android:id="@+id/mNCText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/mNC_string"
       android:layout_below="@id/sSText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/mNC" />
   <TextView
       android:id="@+id/mNC"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/sS"
       android:layout_alignParentRight="true" />
   
   <!--     Mobile Country Code Field -->
   <TextView
       android:id="@+id/mCCText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/mCC_string"
       android:layout_below="@id/mNCText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/mCC" />
   <TextView
       android:id="@+id/mCC"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/mNC"
       android:layout_alignParentRight="true" />
   
	<!--    GPS Header -->
    <TextView
        android:id="@+id/gpsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/mCCText"
        android:text="@string/gPSHeader_string" />

    <!--     Latitude Field -->
   <TextView
       android:id="@+id/latitudeText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/latitude_string"
       android:layout_below="@id/gpsHeader"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/latitude" />
   <TextView
       android:id="@+id/latitude"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/gpsHeader"
       android:layout_alignParentRight="true" />
   
       <!--     Longitude Field -->
   <TextView
       android:id="@+id/longitudeText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/longitude_string"
       android:layout_below="@id/latitudeText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/longitude" />
   <TextView
       android:id="@+id/longitude"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/latitude"
       android:layout_alignParentRight="true" />
   
      <!--     Accuracy Field -->
   <TextView
       android:id="@+id/accuracyText"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/accuracy_string"
       android:layout_below="@id/longitudeText"
       android:layout_alignParentLeft="true"
       android:layout_toLeftOf="@+id/accuracy" />
   <TextView
       android:id="@+id/accuracy"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@id/longitude"
       android:layout_alignParentRight="true" />

<!--    Refresh Button -->
   <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/refreshButton_string"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/accuracyText"
    android:onClick="refreshButton" />
   
</RelativeLayout>